--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,20 @@
 {
-    "manifest_version" : 2,
+    "manifest_version" : 3,
     "name":"AZRelease",
-    "version":"1.0.0.",
+    "version":"1.0.0",
     "description":"AZRelease copied the build numbers of existing release and paste in new release in Microsoft Azure Devops, this saves a time 95% of creating manually releasing.",
     "icons":{
-        "16": "icons8-azure-16"
+        "16": "icons8-azure-16.png"
+    },
+
+    "permissions":[
+        "storage","notifications"
+    ],
+    "action":{
+        "default_title":"click here for new release",
+        "default_popup":"copy.html"
     }
+,
+    "options_page" :"Author.html"
 
 }
